trivial performance improvements

--- a/viewer2.ipynb
+++ b/viewer2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -18,26 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "adding: /home/rdeits/.julia/v0.5/DrakeVisualizer/src/lcmtypes to the python path\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import DrakeVisualizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -71,54 +63,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7114a09900>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]) with children: Dict(:body1=>LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Float64},ColorTypes.RGBA{Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.5),Vec(0.5,0.5,0.5)),RGBA{Float64}(1.0,0.0,0.0,0.5))])),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7efa6a9ebc60>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
       ]
      },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vis = DrakeVisualizer.Visualizer(DrakeVisualizer.HyperRectangle(Vec(0, 0, 0.5), Vec(0.5, 0.5, 0.5)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DrakeVisualizer.draw(vis, Translation([0, 0, 0.5]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7114a09c60>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
-      ]
-     },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -140,7 +88,7 @@
        "DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Float64},ColorTypes.RGBA{Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.5),Vec(1.0,1.0,1.0)),RGBA{Float64}(0.0,0.0,1.0,0.5))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,68 +100,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7114a09c60>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[:robot1,:link1])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "link1 = vis[:robot1][:link1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "link1 = vis[:robot1][:link1]\n",
     "DrakeVisualizer.load!(link1, geomdata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "DrakeVisualizer.draw!(link1, LinearMap(AngleAxis(pi/4, 0, 0, 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7efa6a9ebe10>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]) with children: Dict(:body1=>LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Float64},ColorTypes.RGBA{Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.5),Vec(0.5,0.5,0.5)),RGBA{Float64}(1.0,0.0,0.0,0.5))])),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vis = DrakeVisualizer.Visualizer(DrakeVisualizer.HyperRectangle(Vec(0, 0, 0.5), Vec(0.5, 0.5, 0.5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "DrakeVisualizer.draw(vis, Translation([0, 0, 0.5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "InterruptException:",
+     "evalue": "EOFError: read end of file",
      "output_type": "error",
      "traceback": [
-      "InterruptException:",
+      "EOFError: read end of file",
       "",
-      " in process_events(::Bool) at ./libuv.jl:82",
-      " in wait() at ./event.jl:147",
+      " in yieldto(::Task, ::ANY) at ./event.jl:136",
+      " in wait() at ./event.jl:169",
       " in wait(::Condition) at ./event.jl:27",
       " in wait(::Timer) at ./event.jl:319",
       " in sleep(::Float64) at ./event.jl:360",
-      " in macro expansion; at ./In[10]:4 [inlined]",
+      " in macro expansion; at ./In[29]:4 [inlined]",
       " in anonymous at ./<missing>:?"
      ]
     }
@@ -229,22 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mesh = load(\"/home/rdeits/.julia/v0.5/GeometryTypes/test/data/cat.obj\")\n",
     "DrakeVisualizer.load!(vis[:robot1][:link2], mesh)"
@@ -252,44 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DrakeVisualizer.draw!(vis[:robot1], Translation([1., 0.2, 0.2]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "true"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DrakeVisualizer.draw!(vis[:robot1][:link2], Translation([1., 0.3, 0.3]))"
    ]
