--- a/demo.ipynb
+++ b/demo.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
        "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -192,10 +192,10 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[] using LCM PyLCM.LCM(PyObject <LCM object at 0x324074ba0>)"
+       "Visualizer with path prefix Symbol[] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d72a2e0,RawFD(53),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34e801e30)])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,11 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can use draw() to tell the viewer to draw the box at a specific\n",
     "# position. Translation() creates a CoordinateTransformations.Transformation\n",
@@ -225,31 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# We can also rotate the model by sending a different transformation\n",
-    "draw!(model, LinearMap(AngleAxis(pi/4, 0, 0, 1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# And we can clear the box\n",
-    "delete!(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -257,10 +244,56 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[] using LCM PyLCM.LCM(PyObject <LCM object at 0x31f602cc0>)"
+       "true"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can also rotate the model by sending a different transformation\n",
+    "draw!(model, LinearMap(AngleAxis(pi/4, 0, 0, 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# And we can clear the box\n",
+    "delete!(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Visualizer with path prefix Symbol[] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d2f9b90,RawFD(59),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34bb0fc60)])"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,11 +307,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delete!(model)"
    ]
@@ -298,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -306,10 +350,10 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[] using LCM PyLCM.LCM(PyObject <LCM object at 0x32408cd20>)"
+       "Visualizer with path prefix Symbol[] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d6660b0,RawFD(65),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34d4735e0)])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -329,10 +373,10 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[:group1] using LCM PyLCM.LCM(PyObject <LCM object at 0x32408cd20>)"
+       "Visualizer with path prefix Symbol[:group1] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d6660b0,RawFD(65),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34d4735e0)])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -352,10 +396,10 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[:group1,:greenbox] using LCM PyLCM.LCM(PyObject <LCM object at 0x32408cd20>)"
+       "Visualizer with path prefix Symbol[:group1,:greenbox] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d6660b0,RawFD(65),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34d4735e0)])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,11 +425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# And we set transforms in the same way:\n",
     "draw!(green_box_vis, Translation(0, 0, 1))"
@@ -393,11 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The same indexing notation makes it easy to get a handle to a \n",
     "# particular part of the viewer tree:\n",
@@ -414,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -422,10 +488,10 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[:group1,:bluebox] using LCM PyLCM.LCM(PyObject <LCM object at 0x32408cd20>)"
+       "Visualizer with path prefix Symbol[:group1,:bluebox] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d6660b0,RawFD(65),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34d4735e0)])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,11 +522,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "draw!(vis[:group1], Translation(1, 0, 0))"
    ]
@@ -474,11 +551,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "draw!(vis[:group1][:greenbox], Translation(0, 1, 0))"
    ]
@@ -499,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -527,12 +615,12 @@
     {
      "data": {
       "text/plain": [
-       "nothing"
+       "true"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 19,
      "metadata": {
-      "comm_id": "bec9bfff-8750-4f0b-88ae-be157a2be324",
+      "comm_id": "94039533-78c0-4747-a678-e663781de272",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -554,22 +642,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delete!(vis[:group1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Of course, we can draw much more interesting geometries than \n",
     "# just simple boxes. Let's load a 3D mesh and visualize it:\n",
@@ -582,18 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "delete!(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -601,10 +700,32 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[] using LCM PyLCM.LCM(PyObject <LCM object at 0x32408d390>)"
+       "true"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delete!(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Visualizer with path prefix Symbol[] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34d770000,RawFD(77),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34eb4f020)])"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -652,12 +773,12 @@
     {
      "data": {
       "text/plain": [
-       "Visualizer with path prefix Symbol[] using LCM PyLCM.LCM(PyObject <LCM object at 0x32408d3f0>)"
+       "Visualizer with path prefix Symbol[] using LCM LCMCore.LCM(Ptr{Void} @0x00007fa34eb78cb0,RawFD(83),LCMCore.Subscription[LCMCore.Subscription{LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}}(LCMCore.SubscriptionOptions{DrakeVisualizer.Comms.CommsT,DrakeVisualizer.#handle_msg#7{DrakeVisualizer.CoreVisualizer}}(DrakeVisualizer.Comms.CommsT,DrakeVisualizer.handle_msg),Ptr{Void} @0x00007fa34b902cb0)])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 24,
      "metadata": {
-      "comm_id": "d9880a6c-2233-41a8-9f5d-2c2b45622da0",
+      "comm_id": "6b62a2bb-45e2-43fa-b07a-d8f50d91e5e9",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -684,11 +805,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delete!(model)"
    ]
@@ -704,11 +836,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vis = Visualizer()\n",
     "load!(vis[:group1][:box1], green_box)\n",
@@ -726,11 +869,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vis = Visualizer()\n",
     "batch(vis) do v\n",
@@ -775,73 +929,31 @@
   },
   "widgets": {
    "state": {
-    "03c3ec2d-1225-48f4-b274-a6d337c3e416": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "2fcada92-c4e6-497c-946a-ad98a32cf349": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "362bc1a2-306d-4457-a814-10d99ef8af70": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "4c40071a-a7c1-4100-b92e-538675d3ab38": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "54f924b4-84fb-46db-8cd8-cc5793eb3857": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "5afc1713-9a0e-4557-8246-8d63b505ebfd": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "adf28c45-678d-4112-a7af-c7dd3d428c1c": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "e08734e8-4d03-4e2a-863a-28375a240e57": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "fbc37e3c-0ea2-4db0-bac2-99f78d9e81ee": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "fc959f05-d368-4d33-be14-3fbc6bb8f331": {
+    "14ae2a11-88e5-4ce3-a11c-c03f2c4ba0be": {
      "views": [
       {
        "cell_index": 32
+      }
+     ]
+    },
+    "5e9013c7-082d-49c1-bbb9-08f5a6c89eec": {
+     "views": [
+      {
+       "cell_index": 26
+      }
+     ]
+    },
+    "8155292d-235a-4cc3-a6ec-1654e6452b5e": {
+     "views": [
+      {
+       "cell_index": 26
+      }
+     ]
+    },
+    "e09d3329-2602-48b0-be80-ea4095f8a07a": {
+     "views": [
+      {
+       "cell_index": 26
       }
      ]
     }
