add `using Reactive` to the demo notebook to get around interact issue
see https://github.com/JuliaGizmos/Interact.jl/issues/156

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -12,129 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"interact-js-shim\">\n",
-       "    <script charset=\"utf-8\">\n",
-       "(function (IPython, $, _, MathJax) {\n",
-       "    $.event.special.destroyed = {\n",
-       "\tremove: function(o) {\n",
-       "\t    if (o.handler) {\n",
-       "\t\to.handler.apply(this, arguments)\n",
-       "\t    }\n",
-       "\t}\n",
-       "    }\n",
-       "\n",
-       "    var OutputArea = IPython.version >= \"4.0.0\" ? require(\"notebook/js/outputarea\").OutputArea : IPython.OutputArea;\n",
-       "\n",
-       "    var redrawValue = function (container, type, val) {\n",
-       "\tvar selector = $(\"<div/>\");\n",
-       "\tvar oa = new OutputArea(_.extend(selector, {\n",
-       "\t    selector: selector,\n",
-       "\t    prompt_area: true,\n",
-       "\t    events: IPython.events,\n",
-       "\t    keyboard_manager: IPython.keyboard_manager\n",
-       "\t})); // Hack to work with IPython 2.1.0\n",
-       "\n",
-       "\tswitch (type) {\n",
-       "\tcase \"image/png\":\n",
-       "            var _src = 'data:' + type + ';base64,' + val;\n",
-       "\t    $(container).find(\"img\").attr('src', _src);\n",
-       "\t    break;\n",
-       "\tcase \"text/latex\":\n",
-       "\t\tif (MathJax){\n",
-       "\t\t\tvar math = MathJax.Hub.getAllJax(container)[0];\n",
-       "\t\t\tMathJax.Hub.Queue([\"Text\", math, val.replace(/^\\${1,2}|\\${1,2}$/g, '')]);\n",
-       "\t\t\tbreak;\n",
-       "\t\t}\n",
-       "\tdefault:\n",
-       "\t    var toinsert = OutputArea.append_map[type].apply(\n",
-       "\t\toa, [val, {}, selector]\n",
-       "\t    );\n",
-       "\t    $(container).empty().append(toinsert.contents());\n",
-       "\t    selector.remove();\n",
-       "\t}\n",
-       "    }\n",
-       "\n",
-       "\n",
-       "    $(document).ready(function() {\n",
-       "\tfunction initComm(evt, data) {\n",
-       "\t    var comm_manager = data.kernel.comm_manager;\n",
-       "        //_.extend(comm_manager.targets, require(\"widgets/js/widget\"))\n",
-       "\t    comm_manager.register_target(\"Signal\", function (comm) {\n",
-       "            comm.on_msg(function (msg) {\n",
-       "                var val = msg.content.data.value;\n",
-       "                $(\".signal-\" + comm.comm_id).each(function() {\n",
-       "                var type = $(this).data(\"type\");\n",
-       "                if (typeof(val[type]) !== \"undefined\" && val[type] !== null) {\n",
-       "                    redrawValue(this, type, val[type], type);\n",
-       "                }\n",
-       "                });\n",
-       "                delete val;\n",
-       "                delete msg.content.data.value;\n",
-       "            });\n",
-       "\t    });\n",
-       "\n",
-       "\t    // coordingate with Comm and redraw Signals\n",
-       "\t    // XXX: Test using Reactive here to improve performance\n",
-       "\t    $([IPython.events]).on(\n",
-       "\t\t'output_appended.OutputArea', function (event, type, value, md, toinsert) {\n",
-       "\t\t    if (md && md.reactive) {\n",
-       "                // console.log(md.comm_id);\n",
-       "                toinsert.addClass(\"signal-\" + md.comm_id);\n",
-       "                toinsert.data(\"type\", type);\n",
-       "                // Signal back indicating the mimetype required\n",
-       "                var comm_manager = IPython.notebook.kernel.comm_manager;\n",
-       "                var comm = comm_manager.comms[md.comm_id];\n",
-       "                comm.then(function (c) {\n",
-       "                    c.send({action: \"subscribe_mime\",\n",
-       "                       mime: type});\n",
-       "                    toinsert.bind(\"destroyed\", function() {\n",
-       "                        c.send({action: \"unsubscribe_mime\",\n",
-       "                               mime: type});\n",
-       "                    });\n",
-       "                })\n",
-       "\t\t    }\n",
-       "\t    });\n",
-       "\t}\n",
-       "\n",
-       "\ttry {\n",
-       "\t    // try to initialize right away. otherwise, wait on the status_started event.\n",
-       "\t    initComm(undefined, IPython.notebook);\n",
-       "\t} catch (e) {\n",
-       "\t    $([IPython.events]).on('kernel_created.Kernel kernel_created.Session', initComm);\n",
-       "\t}\n",
-       "    });\n",
-       "})(IPython, jQuery, _, MathJax);\n",
-       "</script>\n",
-       "    <script>\n",
-       "        window.interactLoadedFlag = true\n",
-       "       $(\"#interact-js-shim\").bind(\"destroyed\", function () {\n",
-       "           if (window.interactLoadedFlag) {\n",
-       "               console.warn(\"JavaScript required by Interact will be removed if you remove this cell or run using Interact more than once.\")\n",
-       "           }\n",
-       "       })\n",
-       "       $([IPython.events]).on(\"kernel_starting.Kernel kernel_restarting.Kernel\", function () { window.interactLoadedFlag = false })\n",
-       "   </script>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Activate the DrakeVisualizer package, and import some other \n",
     "# useful functions\n",
     "using DrakeVisualizer\n",
     "using CoordinateTransformations\n",
-    "using Interact\n",
+    "using Interact, Reactive\n",
     "import GeometryTypes: HyperRectangle, Vec, HomogenousMesh\n",
     "import ColorTypes: RGBA"
    ]
@@ -1036,32 +924,6 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "0.5.0"
-  },
-  "widgets": {
-   "state": {
-    "2e88629f-9649-4878-ba0f-a0c5dea7a524": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    },
-    "33c320e9-9f7c-4d1c-9764-7a76dbef5f7b": {
-     "views": [
-      {
-       "cell_index": 32
-      }
-     ]
-    },
-    "401ec26d-067f-4b6e-8825-7723e887676e": {
-     "views": [
-      {
-       "cell_index": 26
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
