make Window first-class and support closing and re-opening

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -110,10 +110,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rather than creating a new window every single time,\n",
+    "# we can save the Window object and re-use it for each\n",
+    "# visualizer\n",
+    "window = Window()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now let's make some more complicated robots. We'll create a \n",
     "# new GeometryData from the box, but color it green this time.\n",
     "green_box = GeometryData(box, RGBA(0., 1, 0, 0.5))\n",
-    "model = Visualizer(green_box)"
+    "model = Visualizer(green_box, window)"
    ]
   },
   {
@@ -145,8 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, we make an empty visualizer:\n",
-    "vis = Visualizer()"
+    "# First, we make an empty visualizer, using our existing window:\n",
+    "vis = Visualizer(window)"
    ]
   },
   {
@@ -331,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delete!(model)"
+    "delete!(vis)"
    ]
   },
   {
@@ -359,7 +371,7 @@
     "# points for which f(x) = 0.\n",
     "\n",
     "# And now we can load that geometry into the visualizer\n",
-    "model = Visualizer(mesh)"
+    "vis = Visualizer(mesh, window)"
    ]
   },
   {
@@ -379,11 +391,20 @@
     "\n",
     "@manipulate for iso_level in linspace(-1, 1, 51)\n",
     "    geometry = contour_mesh(f, lower_bound, upper_bound, iso_level)\n",
-    "    setgeometry!(model, geometry)\n",
+    "    setgeometry!(vis, geometry)\n",
     "end\n",
     "\n",
     "# Note that for high iso_level values our geometry gets cut off at the\n",
     "# edges. We could fix that by replacing the bounds with a bigger box. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Controlling the Window\n",
+    "\n",
+    "We can also close and re-open the visualizer window. This is especially useful if something goes wrong while drawing. "
    ]
   },
   {
@@ -392,7 +413,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delete!(model)"
+    "# Close the window attached to this visualizer\n",
+    "close(vis)  # or close(window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Re-open the window\n",
+    "open(vis)  # or open(window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Send whatever geometries we had back to that window\n",
+    "republish!(vis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let's clear away that mesh so we can try something else\n",
+    "delete!(vis)"
    ]
   },
   {
@@ -410,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis = Visualizer()\n",
+    "vis = Visualizer(window)\n",
     "setgeometry!(vis[:group1][:box1], green_box)\n",
     "setgeometry!(vis[:group1][:box2], green_box)\n",
     "settransform!(vis[:group1], Translation(0, 1, 0))\n",
@@ -430,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis = Visualizer()\n",
+    "vis = Visualizer(window)\n",
     "batch(vis) do v\n",
     "    setgeometry!(v[:group1][:box1], green_box)\n",
     "    setgeometry!(v[:group1][:box2], green_box)\n",
@@ -516,16 +568,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Close the viewer:\n",
+    "# Close the viewer window\n",
     "close(vis)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
