Clean up dependencies and notebooks for a happy retirement

--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -16,12 +16,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Optional: \n",
+    "# These commands tell the Julia package manager to use the exact\n",
+    "# set of dependencies specified in the Project.toml and\n",
+    "# Manifest.toml files in this folder. That should\n",
+    "# give you a nice, reproducible environment for testing. \n",
+    "\n",
+    "using Pkg\n",
+    "Pkg.activate(@__DIR__)\n",
+    "Pkg.instantiate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Activate the DrakeVisualizer package, and import some other \n",
     "# useful functions\n",
     "using DrakeVisualizer\n",
     "using CoordinateTransformations\n",
-    "using Interact\n",
-    "using GeometryTypes: HyperRectangle, Vec, HomogenousMesh\n",
+    "using GeometryTypes: GeometryTypes, HyperRectangle, Vec, HomogenousMesh\n",
     "using ColorTypes: RGBA"
    ]
   },
@@ -263,25 +279,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try interactively moving the entire group (with the first slider) and also just the green box (with the second slider):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@manipulate for x1 in 0:0.01:2, x2 in 0:0.01:2\n",
-    "    settransform!(vis[:group1], Translation(x1, 0, 0))\n",
-    "    settransform!(vis[:group1][:greenbox], Translation(x2, 1, 0))\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Likewise, we can delete an entire group:"
    ]
   },
@@ -304,7 +301,6 @@
     "# just simple boxes. Let's load a 3D mesh and visualize it:\n",
     "using MeshIO\n",
     "using FileIO\n",
-    "import GeometryTypes\n",
     "cat_mesh = load(joinpath(dirname(pathof(GeometryTypes)), \"..\", \"test\", \"data\", \"cat.obj\"))\n",
     "\n",
     "model = Visualizer(cat_mesh);\n",
@@ -346,30 +342,6 @@
     "\n",
     "# And now we can load that geometry into the visualizer\n",
     "model = Visualizer(mesh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We can even manipulate the geometry by changing the iso level. \n",
-    "# By default, contour_mesh constructs a mesh connecting the points \n",
-    "# in space for which f(x) = 0, where 0 is called the isosurface level\n",
-    "# or iso level. But we can change that iso level to any number we want:\n",
-    "\n",
-    "# Note that for high iso_level values our geometry gets cut off at the\n",
-    "# edges. We could fix that by replacing the bounds with a bigger box. \n",
-    "\n",
-    "f = x -> sum(sin, 5 * x)\n",
-    "lower_bound = Vec(-1.,-1,-1)\n",
-    "upper_bound = Vec(1., 1, 1)\n",
-    "\n",
-    "@manipulate for iso_level in -1:0.01:1\n",
-    "    geometry = contour_mesh(f, lower_bound, upper_bound, iso_level)\n",
-    "    model = Visualizer(geometry)\n",
-    "end"
    ]
   },
   {
@@ -508,16 +480,20 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "802dbde996f140c4850191e992e4fd34",
+   "lastKernelId": "cf699830-d365-4dc7-84b5-6f35f7abf242"
+  },
   "kernelspec": {
-   "display_name": "Julia 0.7.0",
+   "display_name": "Julia 1.1.0",
    "language": "julia",
-   "name": "julia-0.7"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.7.0"
+   "version": "1.1.0"
   }
  },
  "nbformat": 4,
